Added async methods implementation
